<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/custom_bg_dialog"
              android:orientation="vertical"
              android:padding="10dp">

    <dev.datvt.cloudtracks.utils.CustomFontTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/give_name_playlist"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"
                  android:layout_marginRight="5dp"
                  android:layout_marginTop="15dp"
                  android:background="@drawable/custom_input">
        <EditText android:id="@+id/edtInput"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="3dp"
                  android:layout_marginLeft="15dp"
                  android:layout_marginRight="5dp"
                  android:layout_marginTop="3dp"
                  android:layout_weight="1"
                  android:hint="@string/input_name"
                  android:textSize="13sp"/>

        <ImageView
            android:id="@+id/btnDel"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/custon_bg_del"
            android:src="@drawable/ic_close_dark"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:layout_marginBottom="10dp"
                  android:layout_marginTop="15dp">
        <dev.datvt.cloudtracks.utils.CustomFontTextView
            android:id="@+id/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn_dialog"
            android:gravity="center"
            android:layout_marginRight="30dp"
            android:paddingBottom="13dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="13dp"
            android:text="@string/create"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@drawable/custom_text_color"/>

        <dev.datvt.cloudtracks.utils.CustomFontTextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginLeft="30dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn_dialog"
            android:gravity="center"
            android:paddingBottom="13dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="13dp"
            android:text="@string/cancel"
            android:textColor="@drawable/custom_text_color"/>
    </LinearLayout>
</LinearLayout>