<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorWhite"
              android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="60dp"
                  android:background="@color/colorPrimary"
                  android:elevation="10dp">
        <ImageView android:id="@+id/btnBackAbout"
                   android:layout_width="25dp"
                   android:layout_height="match_parent"
                   android:layout_marginLeft="20dp"
                   android:background="@drawable/custom_bg"
                   android:src="@drawable/actionbar_back"/>
        <dev.datvt.cloudtracks.utils.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout_marginTop="30dp"
                  android:gravity="center_horizontal"
                  android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher"/>

        <dev.datvt.cloudtracks.utils.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/name_about"
            android:textColor="@color/colorOrange"
            android:textSize="18sp"/>

        <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="15dp"
                   android:src="@drawable/made_with_love"/>

        <LinearLayout android:layout_width="270dp"
                      android:layout_height="wrap_content"
                      android:layout_gravity="center"
                      android:layout_marginTop="12dp"
                      android:background="@color/colorWhite"
                      android:elevation="5dp"
                      android:gravity="center"
                      android:orientation="vertical">


            <dev.datvt.cloudtracks.utils.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/about_detail"
                android:textColor="@color/colorBlack"
                android:textSize="13sp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/dworks_dark"/>

            <dev.datvt.cloudtracks.utils.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/about_detail2"
                android:textColor="@color/colorBlack"
                android:textSize="13sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>